--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
     name: E2E on Chrome
     steps:
       - uses: actions/checkout@v3
+      - name: Install dependences
+        run: npm ci
       - uses: cypress-io/github-action@v5
         with:
           browser: chrome
@@ -16,6 +18,8 @@ jobs:
     name: E2E on Edge
     steps:
       - uses: actions/checkout@v3
+      - name: Install dependences
+        run: npm ci
       - uses: cypress-io/github-action@v5
         with:
           browser: edge           
